--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pexels Clone</title>
-    <link rel="stylesheet" href="style1m.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -57,6 +57,6 @@
         <p>&copy; 2025 Pexels Clone | <a href="button">Privacy Policy</a></p>
     </footer>
 
-    <script src="script1m.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
